--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "ag-grid-webcomponent",
   "homepage": "https://github.com/ceolter/ag-grid-webcomponent",
-  "version": "0.0.1-beta.0",
+  "version": "0.0.1",
   "authors": [
     "Sean Landsman <sean@thelandsmans.com>"
   ],
