--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ag-grid-webcomponent",
-  "version": "0.0.1-beta.0",
+  "version": "0.0.1",
   "description": "ag-Grid Web Component",
   "main": "index.js",
   "scripts": {
